# slurp

./: .dockerignore  .env  .envrc  .gitignore  Containerfile  README.md  app.py  config.template.toml  config.toml  conftest.py  pyproject.toml  pytest.ini  shell.nix  ytdlpls.service
.github/workflows/: build.yml  lint.yml  test.yml
config/: gunicorn.py
deploy/cri/: docker-compose-dev.yaml  docker-compose.yaml
deploy/systemd/: slurp.service
slurp/: __init__.py  config.py  db.py  exceptions.py  finaliser.py  helpers.py  make_celery.py  routes.py  tasks.py  test_init.py
slurp/api/: __init__.py  fetchtasks.py
slurp/fetchers/: __init__.py  cobalt.py  exceptions.py  get_iplayer.py  mediametadata.py  test_get_iplayer.py  test_ytdlp.py  types.py  ytdlp.py
slurp/lib/yt_block_check/: __init__.py  consts.py  test_module.py
slurp/models/: __init__.py  base.py  task.py
slurp/templates/: _base.html  download.html  fetch.html  index.html  preview.html
slurp/templates/elements/: media.html  progress_report.html
static/: site.webmanifest
templates/: _base.html  download.html  index.html
venv-slurp/: pyvenv.cfg
ytdlpls/: app.py
ytdlpls/templates/: download.html  preview.html
