[project]
name = "slurp"
version = "0.3.1"
description = "Online media ingest utility"
authors = [
    { name = "embr", email = "git@liclac.eu" },
    { name = "duck.", email = "me@duck.moe" }
]
license = { text = "EUPL-1.2" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "yt-dlp (>=2026.2.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "gunicorn (>=25.0.0,<26.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.4,<8.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.1,<8.0.0)",
    "ruff>=0.14.10",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "slurp:serve"
