[project]
name = "slurp"
version = "0.3.1"
description = "Online media ingest utility"
authors = [
    { name = "embr", email = "git@liclac.eu" },
    { name = "duck.", email = "me@duck.moe" },
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "EUPL-1.2" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "yt-dlp (>=2026.2.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "gunicorn (>=25.0.0,<26.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.4,<8.0.0)",
    "yt-dlp-ejs (==0.4.0)",
    "pymediainfo (>=7.0.1,<8.0.0)",
    "flask-sqlalchemy (==3.1.1)",
    "pydantic (==2.13.4)",
    "sqlmodel (==0.0.38)",
    "marshmallow-sqlalchemy (>=1.5.0,<2.0.0)",
    "flask-restx (==1.3.2)",
    "celery==5.6.3",
]

[project.scripts]
serve = "slurp:serve"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.1,<8.0.0)",
    "ruff>=0.14.10",
    "celery-types>=0.26.0"
]

[tool.uv.build-backend]
module-name = "slurp"
namespace = true

[build-system]
requires = ["uv_build>=0.9.22,<0.12.0"]
build-backend = "uv_build"
